# scitos_2d_navigation

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
launch/: amcl.launch  move_base.launch  move_base_3d.launch  scitos_2d_nav.launch
scitos_2d_navigation/: README.md
scitos_move_base_params/: costmap_common_params.yaml  dwa_planner_ros.yaml  global_costmap_params.yaml  global_costmap_params_social.yaml  local_costmap_params.yaml  local_costmap_social_params.yaml  move_base_params.yaml  nav_fn_ros.yaml  plugin_planner_ros.yaml
scitos_move_base_params_3d/: costmap_common_params.yaml  local_costmap_params.yaml
scitos_navigation/: CMakeLists.txt  package.xml
src/: remove_edges_cloud.cpp
